--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -1,12 +1,6 @@
 <!-- templates/authentication/index.html -->
-
 {% extends "base.html" %}
-
 {% block content %}
-<h1 class="title">
-  Flask Login Example
-</h1>
-<h2 class="subtitle">
-  Easy authentication and authorization in Flask.
-</h2>
+    <h1 class="title">Flask Login Example</h1>
+    <h2 class="subtitle">Easy authentication and authorization in Flask.</h2>
 {% endblock %}
