--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -1,9 +1,3 @@
 <!-- templates/authentication/profile.html -->
-
 {% extends "base.html" %}
-
-{% block content %}
-<h1 class="title">
-  Welcome, {{ name }}!
-</h1>
-{% endblock %}
+{% block content %}<h1 class="title">Welcome, {{ name }}!</h1>{% endblock %}
