--- a/templates/base.html
+++ b/templates/base.html
@@ -1,39 +1,23 @@
-<!-- templates/base.html -->
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Flask Auth Example</title>
-        <link rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
-    </head>
-    <body>
-        <section class="hero is-primary is-fullheight">
-            <div class="hero-head">
-                <nav class="navbar">
-                    <div class="container">
-                        <div id="navbarMenuHeroA" class="navbar-menu">
-                            <div class="navbar-end">
-                                {% if current_user.is_authenticated %}
-                                    <a href="{{ url_for('pastebin.profile') }}" class="navbar-item">Profile</a>
-                                {% endif %}
-                                {% if not current_user.is_authenticated %}
-                                    <a href="{{ url_for('auth.login') }}" class="navbar-item">Login</a>
-                                    <a href="{{ url_for('auth.signup') }}" class="navbar-item">Sign Up</a>
-                                {% endif %}
-                                {% if current_user.is_authenticated %}<a href="{{ url_for('auth.logout') }}" class="navbar-item">Logout</a>{% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-            <div class="hero-body">
-                <div class="container has-text-centered">
-                    {% block content %}{% endblock %}
-                </div>
-            </div>
-        </section>
-    </body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Pybin - Pastebin clone written in Python</title>
+  </head>
+  <body>
+
+    {% include 'navbar.html' %}
+
+
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  </body>
 </html>
