--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
                            role="button"
                            data-bs-toggle="dropdown"
                            aria-expanded="false">
-                            {{ current_user.name }}
+                            {{ current_user.username }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark"
                             aria-labelledby="navbarDropdown">
