--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -7,12 +7,23 @@
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     <div class="notification is-danger">
-                        {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
+                        {{ messages[0] }} Go to <a href="{{ url_for('auth.login') }}">login page</a>.
                     </div>
                 {% endif %}
             {% endwith %}
             <form method="POST" action="/signup">
-                <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
+              {{form.csrf_token}}
+              {{form.username}}
+              <ul>
+                {% for error in form.username.errors %}
+                  <li style="color:red;">{{error}}</li> 
+                {% endfor %}
+              </ul>
+              {{form.email}}
+              {{form.password}}
+              {{form.remember}}
+              {{form.recaptcha}}
+              {{form.submit}}
             </form>
         </div>
     </div>
