removed remember field

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -59,7 +59,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="/logout">
                                   <i class="fa fa-window-close-o" aria-hidden="true"></i>
                                   LOGOUT 
                                 </a>
@@ -70,8 +70,8 @@
                 </ul>
             {% else %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <a class="me-1 btn btn-outline-primary nav-link" href="#">LOGIN</a>
-                    <a class="me-1 btn btn-outline-primary nav-link" href="#">SIGN UP</a>
+                    <a class="me-1 btn btn-outline-primary nav-link" href="/login">LOGIN</a>
+                    <a class="me-1 btn btn-outline-primary nav-link" href="/signup">SIGN UP</a>
                 </ul>
             {% endif %}
         </div>
