--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="column is-4 is-offset-4">
-        <h3 class="title">Login</h3>
+        <h3 class="title">Login Page</h3>
         <div class="box">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
@@ -16,7 +16,6 @@
                 {% endfor %}
               </ul>
               {{form.password}}
-              {{form.remember}}
               {{form.submit}}
             </form>
         </div>
