--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="column is-4 is-offset-4">
-        <h3 class="title">Sign Up</h3>
+        <h3 class="title">Sign Up Page</h3>
         <div class="box">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -21,7 +21,6 @@
               </ul>
               {{form.email}}
               {{form.password}}
-              {{form.remember}}
               {{form.recaptcha}}
               {{form.submit}}
             </form>
