updated navbar buttons

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="fs-4 font-monospace navbar-brand me-4" href="#">
+        <a class="fs-4 font-monospace navbar-brand me-4" href="/">
             <img src="https://cdn-icons-png.flaticon.com/512/3209/3209265.png"
                  width="35">
             PYBIN
         </a>
-        <button class="ms-4 me-3 btn btn-success" type="submit">
+        <a href="/" class="ms-4 me-3 btn btn-success" type="submit">
             <i class="fa fa-plus"></i> paste
-        </button>
+        </a>
         <form class="d-flex">
             <input class="form-control me-2"
                    type="search"
