changed pastebin to pybin

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
                             <li>
                                 <a class="dropdown-item" href="#">
                                   <i class="fa fa-list" aria-hidden="true"></i>
-                                  MY PASTEBIN
+                                  MY PYBIN
                                 </a>
                             </li>
                             <li>
