--- a/templates/pybin/error.html
+++ b/templates/pybin/error.html
@@ -3,6 +3,6 @@
 {% if error_code == "404" %}
   This page is no longer available. It has either expired, been removed by its creator, or removed by one of the Pybin staff.
 {% elif error_code == "403" %}
- Error, this is a private paste or is pending moderation. If this paste belongs to you, please login to Pastebin to view it.
+ Error, this is a private paste or is pending moderation. If this paste belongs to you, please login to Pybin to view it.
 {% endif %}
 {% endblock %}
