--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -12,17 +12,15 @@
                 {% endif %}
             {% endwith %}
             <form method="POST" action="/signup">
-              {{form.csrf_token}}
-              {{form.username}}
-              <ul>
-                {% for error in form.username.errors %}
-                  <li style="color:red;">{{error}}</li> 
-                {% endfor %}
-              </ul>
-              {{form.email}}
-              {{form.password}}
-              {{form.recaptcha}}
-              {{form.submit}}
+                {{ form.csrf_token }}
+                {{ form.username }}
+                <ul>
+                    {% for error in form.username.errors %}<li style="color:red;">{{ error }}</li>{% endfor %}
+                </ul>
+                {{ form.email }}
+                {{ form.password }}
+                {{ form.recaptcha }}
+                {{ form.submit }}
             </form>
         </div>
     </div>
