--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,7 +29,7 @@
                         <ul class="dropdown-menu dropdown-menu-dark"
                             aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="/u/{{ current_user.username }}/">
                                     <i class="fa fa-list" aria-hidden="true"></i>
                                     MY PYBIN
                                 </a>
