added syntax field to Paste model

--- a/templates/pybin/home.html
+++ b/templates/pybin/home.html
@@ -18,6 +18,10 @@
             {{ form.tags(placeholder="software, tutorial, data")}}
         </div>
         <div>
+            {{ form.syntax.label }}
+            {{ form.syntax}}
+        </div>
+        <div>
             {{ form.paste_expiration.label }}
             {{ form.paste_expiration }}
         </div>
