--- a/templates/pybin/edit_paste.html
+++ b/templates/pybin/edit_paste.html
@@ -16,6 +16,10 @@
         {{ form.tags(placeholder="software, tutorial, data")}}
     </div>
     <div>
+        {{ form.syntax.label }}
+        {{ form.syntax}}
+    </div>
+    <div>
         {{ form.paste_expiration.label }}
         {{ form.paste_expiration }}
     </div>
