--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -3,7 +3,7 @@
   {% with messages = get_flashed_messages() %}
     {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
   {% endwith %}
-  <form method="POST" action="/">
+  <form method="POST" action="/user/profile/">
     {{ form.csrf_token }}
     <div>
       Username:
@@ -15,7 +15,13 @@
     </div>
     <div>
       Email Status:
-      {% if current_user.email_status %}verified!{% else %}not verified!{% endif %}
+      {% if current_user.email_status %}
+        verified!
+      {% else %}
+
+        <!-- TODO: Implement Email Verification -->
+        not verified! We have sent you an email [ <a href="#">resend verification email</a>]
+      {% endif %}
     </div>
     <div>
         {{ form.website_url.label }}
