--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -47,7 +47,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="/user/profile/">
                                     <i class="fa fa-user-circle" aria-hidden="true"></i>
                                     EDIT PROFILE
                                 </a>
