added avatar to templates

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,8 +2,11 @@
     <div class="container-fluid">
         <a class="fs-4 font-monospace navbar-brand me-4" href="/">
             <img src="https://cdn-icons-png.flaticon.com/512/3209/3209265.png"
-                 width="35">
+                width="32"
+                height="32"
+                >
             PYBIN
+            
         </a>
         <a href="/" class="ms-4 me-3 btn btn-success" type="submit">
             <i class="fa fa-plus"></i> paste
@@ -66,7 +69,11 @@
                             </li>
                         </ul>
                     </li>
-                    <img src="https://pastebin.com/themes/pastebin/img/guest.png" width="40">
+                    {% if current_user.avatar %}
+                      <img src="{{profile_image()}}" width="40" height="40">
+                    {% else %}
+                      <img src="https://pastebin.com/themes/pastebin/img/guest.png" width="40" height="40">
+                    {% endif %}
                 </ul>
             {% else %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
