--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -33,10 +33,14 @@
     </div>
     <div>
       Avatar:
-      {% if current_user.avatar %} current_user.avatar {% else %} <img src="{{url_for('static', filename='img/guest.png')}}">{% endif %}
+    {% if current_user.avatar %} 
+      <img src="data:image/jpg;base64, {{current_user.avatar}}"> 
+    {% else %} 
+      <img src="{{url_for('static', filename='img/guest.png')}}">
+    {% endif %}
 
       <!-- TODO: Make a change-avatar route -->
-      [ <a href="#">change avatar</a> ]
+      [ <a href="/user/change-avatar/">change avatar</a> ]
     </div>
 
     {{ form.submit }}
