formatted code with djlint

--- a/templates/pybin/edit_paste.html
+++ b/templates/pybin/edit_paste.html
@@ -22,7 +22,10 @@
                    class="form-check-label"
                    for="flexSwitchCheckDefault">Syntax Highlighting</label>
         </div>
-        <textarea name="content" class="codemirror-textarea" style="height: 300px; width: 70%;">{{paste.content}}</textarea>
+        <textarea name="content"
+                  class="codemirror-textarea"
+                  style="height: 300px;
+                         width: 70%">{{paste.content}}</textarea>
         <div>
             {{ form.category.label }}
             {{ form.category }}
